--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -3,7 +3,9 @@
 parameters:
 #    parameter_name: value
 
+# app/config/services.yml
 services:
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    app.form.registration:
+        class: UserBundle\Form\RegistrationType
+        tags:
+            - { name: form.type, alias: app_user_registration }
