--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -38,6 +38,7 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/documents/new, role: IS_AUTHENTICATED_FULLY }
             # activate different ways to authenticate
 
             # http_basic: ~
